--- a/index.html
+++ b/index.html
@@ -248,15 +248,14 @@
 
     <script>
         // --- Configuration ---
-        const CLIENT_ID = 'YOUR_CLIENT_ID'; // Replace with your Google Cloud project's Client ID
+        const CLIENT_ID = '943947058521-hecubmu4dl8coankfti29konro2b95hu.apps.googleusercontent.com'; // Replace with your Google Cloud project's Client ID
         const API_KEY = 'YOUR_API_KEY';     // Optional: Replace with your API Key if needed, but OAuth client ID usually suffices for user-specific access.
         const DISCOVERY_DOCS = ["https://sheets.googleapis.com/$discovery/rest?version=v4"];
         const SCOPES = 'https://www.googleapis.com/auth/spreadsheets'; // Read and write access to spreadsheets
 
         // List of your Google Sheet IDs and their display names
         const SHEETS = [
-            { id: '1YVjFhR8g-v2_EXAMPLE_SHEET_ID_1', name: 'Example Vocab 1' }, // REPLACE with your actual Sheet IDs and names
-            { id: '1ZcZtP2aA-u0_EXAMPLE_SHEET_ID_2', name: 'Example Vocab 2' },
+            { id: '1dCoNwBqJbu5f7jfBxfo7dpPqCMSux26pbY0jMZ0tfHk', name: 'Example Vocab 1' }, // REPLACE with your actual Sheet IDs and names
             // Add more sheet objects here: { id: 'YOUR_SHEET_ID', name: 'Your Sheet Name' },
         ];
         // --- End Configuration ---
