--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <script>
         // --- Configuration ---
         const CLIENT_ID = '943947058521-hecubmu4dl8coankfti29konro2b95hu.apps.googleusercontent.com'; // Replace with your Google Cloud project's Client ID
-        const API_KEY = 'YOUR_API_KEY';     // Optional: Replace with your API Key if needed, but OAuth client ID usually suffices for user-specific access.
+        // const API_KEY = 'YOUR_API_KEY';     // Optional: Replace with your API Key if needed, but OAuth client ID usually suffices for user-specific access.
         const DISCOVERY_DOCS = ["https://sheets.googleapis.com/$discovery/rest?version=v4"];
         const SCOPES = 'https://www.googleapis.com/auth/spreadsheets'; // Read and write access to spreadsheets
 
